Fix styling and whitespace

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -252,13 +252,10 @@
 .add-maintainer-popup-modal-background {
   display: flex;
   justify-content: center;
-  /* background-color: white; */
   z-index: 1;
   background-color: rgba(0,0,0,0.4);
   position: absolute;
-
   align-items: center;
-  justify-content: center;
   width: 100%;
   height: 100%;
 }
@@ -269,4 +266,9 @@
   background-color: white;
   background-clip: content-box;
   box-shadow: inset 0 0 0 10px white;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  width: 30%;
+  height: 5%;
 }
